<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--搜索塊-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/shape_edit"
        android:layout_margin="8dp">
        <EditText
            android:id="@+id/et_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:hint="@string/et_search"
            android:textSize="20sp"
            android:layout_marginLeft="5dp"
            android:padding="5dp"
            android:background="@color/colorBack"/>

        <Button
            android:id="@+id/btn_search"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="10dp"
            android:background="@drawable/shape_button_search"/>
    </LinearLayout>

    <!--翻譯模塊-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_trans"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="5dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorBorder" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tv_originText"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"/>
            <TextView
                android:id="@+id/tv_originText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:textSize="18sp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="-15dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tv_transText"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"/>
            <TextView
                android:id="@+id/tv_transText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:textSize="18sp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="-15dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tv_spell"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"/>
            <TextView
                android:id="@+id/tv_spellText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:textSize="18sp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="-10dp"/>
            <Button
                android:id="@+id/btn_spellVoice"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@drawable/voice2"
                android:layout_marginRight="50dp"
                android:layout_marginTop="7dp" />
        </LinearLayout>

    </LinearLayout>

    <!-- 例句塊-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_sample"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="5dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorBorder" />

        <ListView
            android:id="@+id/lv_sample"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </ListView>

    </LinearLayout>


</LinearLayout>
